# triathlon-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
tests/: test_api.py
triathlon/: __init__.py  triathlon.py
triathlon_py/: exceptions.py  triathlon.py  urls.py
