[tool.poetry]
name = "triathlon-py"
version = "0.1.0"
description = ""
authors = ["0xMRTT <0xMRTT@tuta.io>"]
readme = "README.md"
packages = [{include = "triathlon_py"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
requests-oauthlib = "^1.3.1"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
