[tool.poetry]
name = "triathlon"
version = "0.1.0"
description = "API wrapper for triathlon.org API"
authors = ["0xMRTT <0xMRTT@tuta.io>"]
readme = "README.md"
packages = [{include = "triathlon"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
requests-oauthlib = "^1.3.1"
pytest = "^7.2.2"


[tool.poetry.group.dev.dependencies]
importlib-metadata = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
